# ChangeLog file for sql/src/backends/monet5
# This file is updated with mchangelog (Gentoo echangelog bastard script)

props = 1837591

  08 Jun 2009; Fabian Groffen <fabian@cwi.nl> monetdb.c:
  Avoid multiple questions by merging them into a single confirmation for the
  destroy command.  This accidently fixes a bug where a response such as 'yes'
  would abort the next database removal.

  04 Jun 2009; Fabian Groffen <fabian@cwi.nl> merovingian.1, merovingian.c:
  Implemented a configurable port for the neighbour discovery service. This
  also allows to entirely disable neighbour discovery by setting
  mero_discoveryport to 0.  Feature request #2800964

  02 Jun 2009; Fabian Groffen <fabian@cwi.nl> merovingian.c, monetdb.c:
  monetdb now copies the sql_logdir setting at the time of a create as a
  property for merovingian.  This way, databases under merovingian's
  control are safe from sql_logdir changes in the monetdb5.conf file.
  This is a good thing, since any change will lead to a database that
  cannot and won't startup.  In the future it can become possible to
  change the logdir location via monetdb.

  02 Jun 2009; Fabian Groffen <fabian@cwi.nl> monetdb.c:
  Implemented dynamic width of monetdb status output. If a database name is
  wider than 14 chars, the name column is made wider as long as the
  terminal window allows.  If a column cannot be made any wider this
  way, it is abbreviated as before.

*May2009

  15 May 2009; Fabian Groffen <fabian@cwi.nl> merovingian.1, merovingian.mx:
  Implemented Feature Request #2705670.  Reopen logfiles when SIGHUP is
  received.

  13 May 2009; Fabian Groffen <fabian@cwi.nl> merovingian.1, merovingian.mx:
  Implemented feature request #2782776. All logged messages are now prefixed
  with a timestamp.

*Feb2009-SP2

  21 Apr 2009; Fabian Groffen <fabian@cwi.nl> merovingian.mx, monetdb.1:
  Instead of sending SIGTERM and immediately returning, call the