@@ -23,7 +23,8 @@ stopping a database inside the MonetDB Database Server.
 .IP "create [\-l] database [database ...]"
 Initialises a new database in the MonetDB Database Server.  A database
 created with this command makes it available for use by clients under
-its database name.
+its database name.  The name of the database must match the expression
+[A\-Za\-z0\-9\-_]+.
 .IP \-l
 The
 .I \-l
